--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
    <application
         android:usesCleartextTraffic="true"
-        android:label="english_test"
+        android:label="I Can Spell"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
