--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_widget_from_html: ^0.9.0+1
   get: ^4.6.5
   google_fonts: ^3.0.1
   http: ^0.13.5
