--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.11.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
   flutter_test:
     sdk: flutter
 
