--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
    <application
         android:usesCleartextTraffic="true"
-        android:label="I Can Spell"
+        android:label="ICANSPELL"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
