skip button add

--- a/macos/Podfile
+++ b/macos/Podfile
@@ -32,7 +32,12 @@ target 'Runner' do
 
   flutter_install_all_macos_pods File.dirname(File.realpath(__FILE__))
 end
-
+#onesignal
+target 'OneSignalNotificationServiceExtension' do
+  use_frameworks!
+  pod 'OneSignalXCFramework', '>= 3.4.3', '< 4.0'
+end
+#finish
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_macos_build_settings(target)
