--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   audioplayers: ^1.1.1
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.0
+  google_sign_in: ^5.4.2
   flutter:
     sdk: flutter
   flutter_widget_from_html: ^0.9.0+1
@@ -38,6 +41,8 @@ dependencies:
   google_fonts: ^3.0.1
   http: ^0.13.5
   lottie: ^2.0.0
+  onesignal_flutter: ^3.5.0
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
