--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
   google_sign_in: ^5.4.2
+  flutter_facebook_auth: ^5.0.6
   flutter:
     sdk: flutter
   flutter_widget_from_html: ^0.9.0+1
@@ -43,10 +44,15 @@ dependencies:
   lottie: ^2.0.0
   onesignal_flutter: ^3.5.0
   share_plus: ^6.3.0
+  shared_preferences: ^2.0.15
+  cached_network_image: ^3.2.3
+  loading_animation_widget: ^1.2.0+4
+  progress_loading_button: ^1.1.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.11.0"
+  change_app_package_name: ^1.1.0
 
 flutter_icons:
   android: "launcher_icon"
