--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = english_test
+PRODUCT_NAME = ICANSPELL
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.englishTest
+PRODUCT_BUNDLE_IDENTIFIER = com.icanspell.app
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = The product copyright of the macos app
