--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,33 @@
+package_rename_config:
+  android:
+    app_name: ICANSPELL
+    package_name: com.icanspell.app
+
+  ios:
+    app_name: ICANSPELL
+    bundle_name: com.icanspell.app
+    package_name: com.icanspell.app
+
+  linux:
+    app_name: ICANSPELL
+    package_name: com.icanspell.app
+    exe_name: ICANSPELL-linux-x64
+
+  macos:
+    app_name: ICANSPELL
+    package_name: com.icanspell.app
+    copyright_notice: The product copyright of the macos app
+
+  web:
+    app_name: ICANSPELL
+    description: The description of the web app and PWA
+
+  windows:
+    app_name: ICANSPELL
+    organization: DEVDEEN
+    copyright_notice: The legal copyright of the windows app
+    exe_name: ICANSPELL-win64
+
 name: english_test
 description: A new Flutter project.
 
@@ -30,29 +60,32 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   audioplayers: ^1.1.1
+  bcrypt: ^1.1.3
+  cached_network_image: ^3.2.3
+  crypto: ^3.0.2
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
-  google_sign_in: ^5.4.2
-  flutter_facebook_auth: ^5.0.6
+  firebase_core: ^2.4.0
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^5.0.6
   flutter_widget_from_html: ^0.9.0+1
   get: ^4.6.5
   google_fonts: ^3.0.1
+  google_sign_in: ^5.4.2
   http: ^0.13.5
+  loading_animation_widget: ^1.2.0+4
   lottie: ^2.0.0
   onesignal_flutter: ^3.5.0
+  pointycastle: ^3.6.2
+  progress_loading_button: ^1.1.4
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
-  cached_network_image: ^3.2.3
-  loading_animation_widget: ^1.2.0+4
-  progress_loading_button: ^1.1.4
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.11.0"
-  change_app_package_name: ^1.1.0
+  flutter_lints: ^2.0.0
+  package_rename: ^1.0.0+1
 
 flutter_icons:
   android: "launcher_icon"
