--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         
    <application
         android:usesCleartextTraffic="true"
-        android:label="ICANSPELL"
+        android:label="Spellicious"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
@@ -43,7 +43,7 @@
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                     "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="ICANSPELL" />
+            android:label="Spellicious" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
