--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ package_rename_config:
   linux:
     app_name: Spellicious
     package_name: com.icanspell.app
-    exe_name: ICANSPELL-linux-x64
+    exe_name: Spellicious-linux-x64
 
   macos:
     app_name: Spellicious
@@ -35,7 +35,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 5.0.0+5
+version: 3.0.0+2
 
 environment:
   sdk: '>=2.19.0-264.0.dev <3.0.0'
@@ -47,24 +47,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  audioplayers: ^1.1.1
+  audioplayers: ^3.0.1
   bcrypt: ^1.1.3
   cached_network_image: ^3.2.3
   crypto: ^3.0.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.0
-  firebase_core: ^2.4.0
+  firebase_core: ^2.9.0
   flutter:
     sdk: flutter
-  flutter_facebook_auth: ^5.0.6
+  flutter_facebook_auth: 
   flutter_widget_from_html: ^0.9.0+1
   get: ^4.6.5
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   google_sign_in: ^5.4.2
-  http: ^0.13.5
+  http: 
   loading_animation_widget: ^1.2.0+4
   lottie: ^2.0.0
-  onesignal_flutter: ^3.5.0
   pointycastle: ^3.6.2
   progress_loading_button: ^1.1.4
   share_plus: ^6.3.0
@@ -76,6 +75,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.11.0"
   flutter_lints: ^2.0.0
   package_rename: ^1.0.0+1
+
 
 flutter_icons:
   android: "launcher_icon"
